fix missing workflow reqs
#VERCEL_SKIP

--- a/.github/workflows/update_stats.yml
+++ b/.github/workflows/update_stats.yml
@@ -16,6 +16,10 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install Deps
+        run: |
+          pip install requests
+
       - name: Fetch GitHub Data & Merge JSON
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
