Change GitHub token in update_stats.yml
Updated GitHub token from GITHUB_TOKEN to REPO_TOKEN for fetching data.

--- a/.github/workflows/update_stats.yml
+++ b/.github/workflows/update_stats.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Fetch GitHub Data & Merge JSON
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.REPO_TOKEN }}
         run: |
           python - <<EOF
           import json
