--- a/.github/workflows/update_stats.yml
+++ b/.github/workflows/update_stats.yml
@@ -1,8 +1,11 @@
 name: Update Portfolio Stats
 on:
   schedule:
-    - cron: '0 0 * * *' # Every 24 hours
+    - cron: '0 0 * * *'
   workflow_dispatch: # Manual trigger
+
+permissions:
+  contents: write
 
 jobs:
   update-stats:
@@ -22,7 +25,7 @@ jobs:
 
       - name: Fetch GitHub Data & Merge JSON
         env:
-          GH_TOKEN: ${{ secrets.REPO_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           python - <<EOF
           import json
