Fix path separator in git add command for stats.json

--- a/.github/workflows/update_stats.yml
+++ b/.github/workflows/update_stats.yml
@@ -118,6 +118,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-          git add lib\stats.json
+          git add lib/stats.json
           git commit -m "System Sync: Auto-promoted recent projects $(date -u +'%Y-%m-%d')" || exit 0
           git push
